--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -25,10 +25,11 @@ jobs:
         with:
           cache: true
       - run: flutter pub get
+      # The flutter build command defaults to --release. [Docu](https://docs.flutter.dev/deployment/android)
       - name: Build web
-        run: flutter build web --release
+        run: flutter build web
       - name: Build apk
-        run: flutter build apk --release
+        run: flutter build apk --split-per-abi
       - uses: actions/upload-artifact@v4
         with:
           name: build-${{ github.sha }}
