ci: add analyze step

--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -37,3 +37,5 @@ jobs:
           retention-days: 1
       - name: Test
         run: flutter test
+      - name: Analyse
+        run: flutter analyze --fatal-warnings
