--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.1
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
