--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.9
   dotted_border: ^2.0.0
+  dropdown_button2: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +41,7 @@ dependencies:
   
   graphql: ^5.2.0-beta.8
   provider: ^6.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
