--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.2
-  
+  graphql: ^5.2.0-beta.8
   provider: ^6.0.1
   intl: ^0.19.0
   json_serializable: ^6.8.0
