--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   dotted_border: ^2.0.0
   dropdown_button2: ^2.3.0
   flutter_pdfview: ^1.0.6
+  permission_handler: ^10.2.0
+  printing: ^5.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +49,7 @@ dependencies:
   json_annotation: ^4.9.0
   mockito: ^5.4.4
   path_provider: ^2.1.4
+  pdf: ^3.11.1
 
 dev_dependencies:
   flutter_test:
