--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,10 +5,9 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <application
         android:requestLegacyExternalStorage="true"
-        android:label="Time Tracker Mandalore"
-        android:name="Time Tracker Mandalore"
+        android:label="ttfrontend"
+        android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
-        <!-- android:name="${applicationName}" -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
